RESOLVED FIXED161689
v3: WebContent crash due to RELEASE_ASSERT in WebCore: WebCore::StyleResolver::styleForElement
https://bugs.webkit.org/show_bug.cgi?id=161689
Summary v3: WebContent crash due to RELEASE_ASSERT in WebCore: WebCore::StyleResolver...
Antti Koivisto
Reported 2016-09-07 08:55:22 PDT
Resource loads triggered by StyleResolver have often caused trouble due to various bad things happening synchronously in resource load related callbacks.
Attachments
patch (16.05 KB, patch)
2016-09-07 08:57 PDT, Antti Koivisto
buildbot: commit-queue-
Archive of layout-test-results from ews102 for mac-yosemite (1.17 MB, application/zip)
2016-09-07 09:35 PDT, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (986.81 KB, application/zip)
2016-09-07 09:56 PDT, Build Bot
no flags
Archive of layout-test-results from ews112 for mac-yosemite (1.60 MB, application/zip)
2016-09-07 10:01 PDT, Build Bot
no flags
Archive of layout-test-results from ews124 for ios-simulator-elcapitan-wk2 (7.90 MB, application/zip)
2016-09-07 10:12 PDT, Build Bot
no flags
patch (17.72 KB, patch)
2016-09-08 06:21 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2016-09-07 08:57:44 PDT
Build Bot
Comment 2 2016-09-07 09:35:18 PDT
Comment on attachment 288141 [details] patch Attachment 288141 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2026112 New failing tests: transitions/crossfade-transition.html imported/blink/animations/deleted-image-set-transition-crash.html
Build Bot
Comment 3 2016-09-07 09:35:21 PDT
Created attachment 288147 [details] Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4 2016-09-07 09:56:44 PDT
Comment on attachment 288141 [details] patch Attachment 288141 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2026228 New failing tests: transitions/crossfade-transition.html
Build Bot
Comment 5 2016-09-07 09:56:46 PDT
Created attachment 288152 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-09-07 10:01:46 PDT
Comment on attachment 288141 [details] patch Attachment 288141 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2026240 New failing tests: transitions/crossfade-transition.html imported/blink/animations/deleted-image-set-transition-crash.html
Build Bot
Comment 7 2016-09-07 10:01:48 PDT
Created attachment 288153 [details] Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 8 2016-09-07 10:12:24 PDT
Comment on attachment 288141 [details] patch Attachment 288141 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/2026287 New failing tests: transitions/crossfade-transition.html imported/blink/animations/deleted-image-set-transition-crash.html
Build Bot
Comment 9 2016-09-07 10:12:27 PDT
Created attachment 288155 [details] Archive of layout-test-results from ews124 for ios-simulator-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-elcapitan-wk2 Platform: Mac OS X 10.11.5
Antti Koivisto
Comment 10 2016-09-08 06:06:19 PDT
Antti Koivisto
Comment 11 2016-09-08 06:21:15 PDT
Andreas Kling
Comment 12 2016-09-08 16:46:22 PDT
Comment on attachment 288262 [details] patch r=me This is great.
WebKit Commit Bot
Comment 13 2016-09-09 00:44:58 PDT
Comment on attachment 288262 [details] patch Clearing flags on attachment: 288262 Committed r205701: <http://trac.webkit.org/changeset/205701>
WebKit Commit Bot
Comment 14 2016-09-09 00:45:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.